[package]
name = "rustberry"
version = "0.0.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>",
           "Nicolas Chataing <nicolas.chataing@ens.fr>"]

[lib]
crate-type = ["staticlib"]
path = "src/kernel.rs"

[dependencies]
rlibc = "1.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
pi1 = []
pi2 = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
