[package]
name = "rustberry_drivers"
version = "0.0.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>",
           "Nicolas Chataing <nicolas.chataing@ens.fr>"]
edition = "2018"

[lib]
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
bitflags = "1"

[features]
pi2 = []
mini_uart = []
