[package]
name = "rustberry_kernel"
version = "0.0.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>",
           "Nicolas Chataing <nicolas.chataing@ens.fr>"]

[lib]
crate-type = ["staticlib"]
path = "kernel.rs"

[dependencies]
rlibc = "1.0"
bitflags = "1"
rustberry_drivers = { path = "../drivers" }
rustberry_allocator = { path = "../allocator" }

[features]
pi2 = ["rustberry_drivers/pi2"]
mini_uart = ["rustberry_drivers/mini_uart"]
