[package]
name = "rustberry_kernel"
version = "0.0.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>",
           "Nicolas Chataing <nicolas.chataing@ens.fr>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
path = "kernel.rs"

[dependencies]
rlibc = "1.0"
bitflags = "1"
plain = "0.2.3"
goblin = { version = "0.0.15", default-features = false, features = ["elf32"] }
rustberry_drivers = { path = "../drivers" }
rustberry_allocator = { path = "../allocator" }
rustberry_io = { path = "../io" }

[features]
pi2 = ["rustberry_drivers/pi2"]
mini_uart = ["rustberry_drivers/mini_uart"]
