[package]
name = "rustberry_std"
version = "0.0.0"
authors = ["Guillaume Bertholon <guillaume.bertholon@ens.fr>",
           "Nicolas Chataing <nicolas.chataing@ens.fr>"]
edition = "2018"

[lib]
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
rlibc = "1.0"
rustberry_io = { path = "../io" }
rustberry_allocator = { path = "../allocator" }
